# yap-box

./: .gitignore  CHANGELOG.md  INSTALL.txt  LICENSE  Makefile  PRIVACY.md  README.md  THIRD_PARTY_LICENSES.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/espeak-ng-data/: .gitkeep
src-tauri/src/: downloads.rs  kokoros.rs  lib.rs  main.rs  paths.rs  strip.rs
src/components/: ModelDownload.tsx  Settings.tsx
src/hooks/: useSpinner.ts
