[package]
name = "yap-box"
version = "0.1.3"
description = "Drop text in, hear it spoken"
authors = ["Christian Alexa"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "yap_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.0", features = [] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["process", "fs", "io-util", "time"] }
nix = { version = "0.29", features = ["signal"] }
regex = "1"
tauri-plugin-shell = "2"
futures-util = "0.3"
